--- a/templates/hello.html
+++ b/templates/hello.html
@@ -1,3 +1,9 @@
 <!doctype html>
 <title>CryptoPython</title>
 <h1>Bienvue dans votre atelier CryptoPython !</h1>
+
+<style>
+  h1 {
+    color : green;
+  }
+</style>
