--- a/templates/hello.html
+++ b/templates/hello.html
@@ -2,3 +2,9 @@
 <title>CryptoPython</title>
 <h1>Bienvue dans votre atelier CryptoPython !</h1>
 
+<style>
+  body {
+    background-color: #383e50;
+    color: white;
+  }
+</style>
