--- a/templates/hello.html
+++ b/templates/hello.html
@@ -4,7 +4,21 @@
 
 <style>
   body {
-    background-color: #383e50;
+    background-color: #2a2e3a;
     color: white;
+    font-family: 'Verdana';
+  }
+
+  h1 {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    background-color: #383e50;
+    transition: all 0.2s;
+  }
+
+  h1:hover {
+    background-color: white;
+    color: #2a2e3a;
   }
 </style>
