--- a/templates/hello.html
+++ b/templates/hello.html
@@ -10,9 +10,9 @@
   }
 
   h1 {
-    position: absolute;
-    top: 50%;
-    left: 50%;
+    text-align: center;
+    padding: 10px;
+    cursor: pointer;
     background-color: #383e50;
     transition: all 0.2s;
   }
