--- a/templates/hello.html
+++ b/templates/hello.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <title>CryptoPython</title>
-<h1>Bienvue dans votre atelier CryptoPython !</h1>
+<h1>Bienvenu dans votre atelier CryptoPython !</h1>
 
 <style>
   body {
